<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.w3rk.harrimargono_1202151230_modul2.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/iv"
            android:layout_width="276dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/applogo" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="FUDYFOOD"
            android:textColor="#124559"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SPACEEEE"
            android:textSize="40dp"
            android:textColor="#f9f9f9"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pilih_menu"
            android:textSize="20dp"
            android:gravity="center"/>

        <Space
            android:layout_width="1dp"
            android:layout_height="30dp"/>

        <RadioGroup
            android:id="@+id/rgPilih"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <RadioButton
                android:id="@+id/dinein"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/dine_in" />

            <RadioButton
                android:id="@+id/takeaway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/take_away" />

            </RadioGroup>

        <Space
            android:layout_width="1dp"
            android:layout_height="30dp"/>

        <Button
            android:id="@+id/button_pesan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pesan_sekarang" />


    </LinearLayout>



</RelativeLayout>
